# data-agents

./: .dockerignore  .gitignore  Dockerfile  README.md  answer_comparison.py  bench_comparison.py  pyproject.toml  rules.zh.md  test_bench_comparison.py
docker/: Dockerfile.rag  gateway_caps.yaml
old/agents/: model.py  plan_and_solve.md  plan_and_solve.py  plan_and_solve_audit_report.md  prompt.py  react.py  runtime.py
src/: test_react_parsers.py
src/LangChain/: MEMORY_MODULE_PROPOSAL.md  PHASE_05_GATEWAY_SMOKE_PLAN.md
src/data_agent_langchain/: README.md  __init__.py  cli.py  config.py  constants.py  exceptions.py  submission.py
src/data_agent_langchain/agents/: __init__.py  advance_node.py  corpus_recall.py  execution_subgraph.py  finalize.py  gate.py  json_parser.py  memory_recall.py  model_node.py  model_retry.py  observation_prompt.py  parse_action.py  plan_solve_graph.py  planner_node.py  prompt_strings.py  prompts.py  react_graph.py  runtime.py  sanitize.py  task_entry_node.py  text_helpers.py  tool_node.py
src/data_agent_langchain/benchmark/: __init__.py  dataset.py  schema.py
src/data_agent_langchain/llm/: __init__.py  factory.py
src/data_agent_langchain/memory/: __init__.py  base.py  factory.py  records.py  types.py  working.py
src/data_agent_langchain/memory/rag/: __init__.py  base.py  chunker.py  documents.py  factory.py  loader.py  redactor.py
src/data_agent_langchain/memory/retrievers/: __init__.py  exact.py
src/data_agent_langchain/memory/stores/: __init__.py  jsonl.py
src/data_agent_langchain/memory/writers/: __init__.py  store_backed.py
src/data_agent_langchain/observability/: __init__.py  events.py  gateway_caps.py  gateway_smoke.py  metrics.py  reporter.py  tracer.py
src/data_agent_langchain/run/: __init__.py  runner.py
src/data_agent_langchain/runtime/: __init__.py  context.py  rehydrate.py  state.py
src/data_agent_langchain/tools/: __init__.py  answer.py  descriptions.py  execute_context_sql.py  execute_python.py  factory.py  filesystem.py  inspect_sqlite_schema.py  list_context.py  python_exec.py  read_csv.py  read_doc.py  read_json.py  sqlite.py  timeout.py  tool_runtime.py
src/完善计划/: 2026-05-08-env-var-fallback-design.md  v5-execution-notes.md  正式提交完善计划-v2-审查结论.md  正式提交完善计划-v2.md  正式提交完善计划-v4.md  正式提交完善计划-v5.md
src/废弃/data_agent_baseline/: PROJECT_DOCUMENTATION.md  config.py
src/废弃/data_agent_baseline/agents_v2/: README.md  __init__.py  base_agent.py  context_manager.py  gate.py  json_parser.py  model.py  plan_solve_agent.py  prompt.py  react_agent.py  runtime.py  text_helpers.py  timeout.py
src/废弃/data_agent_baseline/run/: README.md  runner.py
src/废弃/data_agent_baseline/tools/: README.md  registry.py
src/废弃/data_agent_common/: __init__.py  constants.py  exceptions.py
src/废弃/data_agent_common/agents/: __init__.py  gate.py  json_parser.py  prompts.py  runtime.py  sanitize.py  text_helpers.py
src/废弃/data_agent_common/benchmark/: __init__.py  dataset.py  schema.py
src/废弃/data_agent_common/tools/: __init__.py  filesystem.py  python_exec.py  sqlite.py
src/废弃/data_agent_refactored/: README.md  REFACTORING_NOTES.md  cli.py  config.py  exceptions.py
src/废弃/data_agent_refactored/agents/: README.md  __init__.py  base_agent.py  context_manager.py  data_preview_gate.py  json_parser.py  model.py  plan_solve_agent.py  prompt.py  react_agent.py  runtime.py  text_helpers.py  timeout.py
src/废弃/data_agent_refactored/benchmark/: __init__.py  dataset.py  schema.py
src/废弃/data_agent_refactored/run/: __init__.py  (+1 more)
src/计划/Doing/: 2026-05-16-RAG记忆模块剩余问题路线图.md
src/计划/LangChain/: LANGCHAIN_MIGRATION_PLAN.md  MIGRATION_STATUS.md  PHASE_05_GATEWAY_SMOKE_DESIGN.md  PHASE_6_TOOL_CALLING_DEFAULT_DESIGN.md  PHASE_6_TOOL_CALLING_DEFAULT_PLAN.md
src/计划/RAG记忆架构演示/: 2026-05-12-rag-memory-html-demo-design.md  2026-05-12-rag-memory-html-demo-plan.md  architecture-rag-memory-demo.html
src/计划/benchmark失败修复/: 2026-05-11-max-steps失败修复计划.md
src/计划/失败原因/: 20260515T162819Z-失败任务分析.md
src/计划/完善计划/: 2026-05-08-env-var-fallback-design.md  正式提交完善计划-v3-审查结论.md  正式提交完善计划-v3.md  正式提交完善计划-v5.md  正式提交完善计划-审查结论.md  正式提交完善计划.md
src/计划/归档/: README.md
src/计划/待做/: 01-corpus-rag-m4-followups.md  02-R6-corpus-recall-evaluation-plan.md
src/计划/统一配置/: 2026-05-09-统一配置参数-design-v2-审查结论.md  2026-05-09-统一配置参数-design-v2.md  2026-05-09-统一配置参数-design-v3-审查结论.md  2026-05-09-统一配置参数-design-v3.md  2026-05-09-统一配置参数-design-v4.md  2026-05-09-统一配置参数-design-审查结论.md  2026-05-09-统一配置参数-design.md  README.md
tests/: conftest.py  test_bench_comparison_scoring.py  test_conftest_deprecated_archive.py  test_dockerfile_rag_invariants.py  test_langchain_self_contained.py  test_packaging_deps.py  test_phase05_gateway_smoke.py  test_phase10_observability_events_fallback.py  test_phase10_observability_metrics_fallback.py  test_phase10_rag_chroma_close_isolation.py  test_phase10_rag_chroma_store.py  test_phase10_rag_chunker.py  test_phase10_rag_config.py  test_phase10_rag_config_nested.py  test_phase10_rag_corpus_recall.py  test_phase10_rag_corpus_store_protocol.py  test_phase10_rag_documents.py  test_phase10_rag_embedder_harrier.py  test_phase10_rag_embedder_stub.py  test_phase10_rag_factory.py  test_phase10_rag_failure_dispatch_guard.py  test_phase10_rag_import_boundary.py  test_phase10_rag_init_exports.py  test_phase10_rag_loader.py  test_phase10_rag_metrics.py  test_phase10_rag_mode_disabled_guard.py  test_phase10_rag_model_node_no_recall.py  test_phase10_rag_packaging.py  test_phase10_rag_planner_recall.py  test_phase10_rag_prompts.py  test_phase10_rag_react_entry.py  test_phase10_rag_redactor.py  test_phase10_rag_runner.py  test_phase10_rag_slow_marker.py  test_phase10_rag_vector_retriever.py  test_phase11_chunker_deps.py  test_phase1_imports.py  test_phase1_parity_constants.py  test_phase1_runstate.py  test_phase25_working_memory.py  (+37 more)
(+31 files in other folders)
